# spotifyQL

./: Cargo.toml  README.md
src/: api.rs  app_context.rs  cache.rs  main.rs
src/auth/: auth_listener.rs  code.rs  mod.rs  token_refresh.rs
src/commands/: input.rs  login.rs  logout.rs  mod.rs
src/config/: app_config.rs  args.rs  mod.rs  user_config.rs
src/query/: condition.rs  data.rs  deserialise.rs  display.rs  mod.rs  parse.rs  run.rs  statements.rs  tokenise.rs  value.rs
src/ui/: event_action.rs  framebuffer.rs  mod.rs  region.rs  tui.rs
src/ui/regions/: input_region.rs  list_region.rs  mod.rs  region.rs  table_region.rs  text_region.rs
src/utils/: date.rs  file.rs  logger.rs  mod.rs  sort.rs  url.rs  utils.rs
