[package]
name = "spotifyQL"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
open = "5.3.3"
reqwest = "0.12.25"
ring = "0.17.14"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = {version = "1.48.0", features = ["rt", "rt-multi-thread"]}
warp = { version = "0.4.2", features = ["server"] }
regex = "1.12.2"
serde_urlencoded = "0.7.1"
chrono = { version = "0.4.43", features = ["now"] }
crossterm = "0.29.0"
